docs/api/qiskit/0.19/qiskit.aqua.algorithms.DeutschJozsa.mdx
---
title: DeutschJozsa (v0.19)
description: API reference for qiskit.aqua.algorithms.DeutschJozsa in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.DeutschJozsa
---

# DeutschJozsa

<Class id="qiskit.aqua.algorithms.DeutschJozsa" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/education/deutsch_jozsa.py" signature="DeutschJozsa(oracle, quantum_instance=None)" modifiers="class">
  The Deutsch-Jozsa algorithm.

  The Deutsch-Jozsa algorithm was one of the first known quantum algorithms that showed an exponential speedup compared to a deterministic (non-probabilistic) classical algorithm, given a black box oracle function. The algorithm determines whether the given function $f:\{0,1\}^n \rightarrow \{0,1\}$ is constant or balanced. A constant function maps all inputs to 0 or 1, and a balanced function maps half of its inputs to 0 and the other half to 1.

  Note: the [`TruthTableOracle`](qiskit.aqua.components.oracles.TruthTableOracle "qiskit.aqua.components.oracles.TruthTableOracle") facilitates creating a constant or balanced function but any oracle can be used as long as the boolean function implemented by the oracle indeed satisfies the constraint of being either constant or balanced.

  **Parameters**

  *   **oracle** ([`Oracle`](qiskit.aqua.components.oracles.Oracle "qiskit.aqua.components.oracles.oracle.Oracle")) – The oracle component
  *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – Quantum Instance or Backend

  ## Attributes

  <span id="deutschjozsa-backend" />

  ### backend

  <Attribute id="qiskit.aqua.algorithms.DeutschJozsa.backend" attributeTypeHint="qiskit.providers.basebackend.BaseBackend">
    Returns backend.

    **Return type**

    [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend")
  </Attribute>

  <span id="deutschjozsa-quantum-instance" />

  ### quantum\_instance

  <Attribute id="qiskit.aqua.algorithms.DeutschJozsa.quantum_instance" attributeTypeHint="Union[None, qiskit.aqua.quantum_instance.QuantumInstance]">
    Returns quantum instance.

    **Return type**

    `Optional`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance")]
  </Attribute>

  <span id="deutschjozsa-random" />

  ### random

  <Attribute id="qiskit.aqua.algorithms.DeutschJozsa.random">
    Return a numpy random.
  </Attribute>

  ## Methods

  <span id="deutschjozsa-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.construct_circuit" signature="DeutschJozsa.construct_circuit(measurement=False)">
    Construct the quantum circuit

    **Parameters**

    **measurement** (*bool*) – Boolean flag to indicate if measurement should be included in the circuit.

    **Returns**

    the QuantumCircuit object for the constructed circuit

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  <span id="deutschjozsa-run" />

  ### run

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.run" signature="DeutschJozsa.run(quantum_instance=None, **kwargs)">
    Execute the algorithm with selected backend.

    **Parameters**

    *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – the experimental setting.
    *   **kwargs** (*dict*) – kwargs

    **Returns**

    results of an algorithm.

    **Return type**

    dict

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided
  </Function>

  <span id="deutschjozsa-set-backend" />

  ### set\_backend

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.set_backend" signature="DeutschJozsa.set_backend(backend, **kwargs)">
    Sets backend with configuration.

    **Return type**

    `None`
  </Function>
</Class>

