docs/api/qiskit/0.24/qiskit.aqua.algorithms.DeutschJozsa.mdx
---
title: DeutschJozsa
description: API reference for qiskit.aqua.algorithms.DeutschJozsa
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.DeutschJozsa
---

<span id="qiskit-aqua-algorithms-deutschjozsa" />

# qiskit.aqua.algorithms.DeutschJozsa

<Class id="qiskit.aqua.algorithms.DeutschJozsa" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/algorithms/education/deutsch_jozsa.py" signature="DeutschJozsa(oracle, quantum_instance=None)">
  The Deutsch-Jozsa algorithm.

  The Deutsch-Jozsa algorithm was one of the first known quantum algorithms that showed an exponential speedup compared to a deterministic (non-probabilistic) classical algorithm, given a black box oracle function. The algorithm determines whether the given function $f:\{0,1\}^n \rightarrow \{0,1\}$ is constant or balanced. A constant function maps all inputs to 0 or 1, and a balanced function maps half of its inputs to 0 and the other half to 1.

  Note: the [`TruthTableOracle`](qiskit.aqua.components.oracles.TruthTableOracle "qiskit.aqua.components.oracles.TruthTableOracle") facilitates creating a constant or balanced function but any oracle can be used as long as the boolean function implemented by the oracle indeed satisfies the constraint of being either constant or balanced.

  **Parameters**

  *   **oracle** (`Oracle`) – The oracle component
  *   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – Quantum Instance or Backend

  ### \_\_init\_\_

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.__init__" name="__init__" signature="__init__(oracle, quantum_instance=None)">
    **Parameters**

    *   **oracle** (`Oracle`) – The oracle component
    *   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – Quantum Instance or Backend
  </Function>

  ## Methods

  |                                                                                                                                                       |                                              |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- |
  | [`__init__`](#qiskit.aqua.algorithms.DeutschJozsa.__init__ "qiskit.aqua.algorithms.DeutschJozsa.__init__")(oracle\[, quantum\_instance])              | **type oracle**`Oracle`                      |
  | [`construct_circuit`](#qiskit.aqua.algorithms.DeutschJozsa.construct_circuit "qiskit.aqua.algorithms.DeutschJozsa.construct_circuit")(\[measurement]) | Construct the quantum circuit                |
  | [`run`](#qiskit.aqua.algorithms.DeutschJozsa.run "qiskit.aqua.algorithms.DeutschJozsa.run")(\[quantum\_instance])                                     | Execute the algorithm with selected backend. |
  | [`set_backend`](#qiskit.aqua.algorithms.DeutschJozsa.set_backend "qiskit.aqua.algorithms.DeutschJozsa.set_backend")(backend, \*\*kwargs)              | Sets backend with configuration.             |

  ## Attributes

  |                                                                                                                                    |                           |
  | ---------------------------------------------------------------------------------------------------------------------------------- | ------------------------- |
  | [`backend`](#qiskit.aqua.algorithms.DeutschJozsa.backend "qiskit.aqua.algorithms.DeutschJozsa.backend")                            | Returns backend.          |
  | [`quantum_instance`](#qiskit.aqua.algorithms.DeutschJozsa.quantum_instance "qiskit.aqua.algorithms.DeutschJozsa.quantum_instance") | Returns quantum instance. |
  | [`random`](#qiskit.aqua.algorithms.DeutschJozsa.random "qiskit.aqua.algorithms.DeutschJozsa.random")                               | Return a numpy random.    |

  ### backend

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.backend" name="backend" signature="property backend">
    Returns backend.

    **Return type**

    `Union`\[`Backend`, `BaseBackend`]
  </Function>

  ### construct\_circuit

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.construct_circuit" name="construct_circuit" signature="construct_circuit(measurement=False)">
    Construct the quantum circuit

    **Parameters**

    **measurement** (*bool*) – Boolean flag to indicate if measurement should be included in the circuit.

    **Returns**

    the QuantumCircuit object for the constructed circuit

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  ### quantum\_instance

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.quantum_instance" name="quantum_instance" signature="property quantum_instance">
    Returns quantum instance.

    **Return type**

    `Optional`\[`QuantumInstance`]
  </Function>

  ### random

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.random" name="random" signature="property random">
    Return a numpy random.
  </Function>

  ### run

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.run" name="run" signature="run(quantum_instance=None, **kwargs)">
    Execute the algorithm with selected backend.

    **Parameters**

    *   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – the experimental setting.
    *   **kwargs** (*dict*) – kwargs

    **Returns**

    results of an algorithm.

    **Return type**

    dict

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided
  </Function>

  ### set\_backend

  <Function id="qiskit.aqua.algorithms.DeutschJozsa.set_backend" name="set_backend" signature="set_backend(backend, **kwargs)">
    Sets backend with configuration.

    **Return type**

    `None`
  </Function>
</Class>

